<resources>
    <string name="app_name">Expert Expense</string>

    <string name="menuitem_customize">Customize</string>
    <string name="menuitem_refresh">Refresh</string>


    <string name="auth_username_field">Email</string>
    <string name="auth_password_field">Password</string>
    <string name="login_button_title">Login</string>
    <string name="signup_button_title">Create Account</string>
    <string name="exit_button_title">Exit</string>

    <string name="setup_cash_hint">Cash (Optional)</string>
    <string name="setup_bank_hint">Bank (Optional)</string>

    <string name="tag_overview_accounts_view">TAG_MY_ACCOUNTS</string>
    <string name="tag_overview_transactions_view">TAG_TRANSACTIONS</string>
    <string name="tag_overview_bills_view">TAG_BILLS</string>

    <string name="tag_accounts_accounts_view">TAG_ACCOUNTS_ACCOUNTS</string>

    <string name="nav_overview">Overview</string>
    <string name="nav_accounts">Accounts</string>
    <string name="nav_transactions">Transactions</string>
    <string name="nav_reports">Reports</string>

    <string name="reports_tab_expense">Expense</string>
    <string name="reports_tab_income">Income</string>
    <string name="reports_tab_cashflow">Cash Flow</string>
    <string name="reports_tab_balance">Balance</string>


    <string name="new_account_account_name">ACCOUNT NAME</string>
    <string name="new_account_starting_balance">STARTING BALANCE</string>
    <string name="new_account_description">DESCRIPTION</string>
    <string name="new_account_currency">CURRENCY</string>
    <string name="new_account_icon">ICON</string>

    <string name="new_account_account_name_hint">Enter Account Name</string>
    <string name="new_account_starting_balance_hint">0.00</string>
    <string name="new_account_description_hint">Enter Description</string>

    <!-- New Transaction -->
    <string name="new_transaction_payee">PAYEE</string>
    <string name="new_transaction_type">TYPE</string>
    <string name="new_transaction_account">ACCOUNT</string>
    <string name="new_transaction_amount">AMOUNT</string>
    <string name="new_transaction_category">CATEGORY</string>
    <string name="new_transaction_status">STATUS</string>
    <string name="new_transaction_notes">NOTES</string>
    <string name="new_transaction_date">DATE</string>

    <string name="new_transaction_account_hint">Choose Account</string>
    <string name="new_transaction_payee_hint">Enter Payee / Item</string>
    <string name="new_transaction_amount_hint">0.00</string>
    <string name="new_transaction_notes_hint">Notes (Eg: Cheque #)</string>
    <string name="new_transaction_date_hint">25/01/2000</string>


    <string name="new_bill_payee">PAYEE</string>
    <string name="new_bill_type">TYPE</string>
    <string name="new_bill_amount">AMOUNT</string>
    <string name="new_bill_currency">CURRENCY</string>
    <string name="new_bill_category">CATEGORY</string>
    <string name="new_bill_notes">NOTES</string>
    <string name="new_bill_due_date">DUE DATE</string>

    <string name="new_bill_payee_hint">Enter Payee / Item</string>
    <string name="new_bill_amount_hint">0.00</string>
    <string name="new_bill_notes_hint">Notes (Eg: Cheque #)</string>
    <string name="new_bill_due_date_hint">25/01/2000</string>

    <string name="save_button">SAVE</string>
    <string name="cancel_button">CANCEL</string>

    <string name="net_balance_amount">Net Balance (CAD): $%1$.2f</string>
    <string name="money_amount">$%1$.2f</string>
    <string name="money_amount_negative">-$%1$.2f</string>

    <string name="calc_dialog_clear">Clear</string>
    <string name="calc_dialog_cancel">Cancel</string>
    <string name="calc_dialog_ok">OK</string>

    <string name="calc_answer">Ans</string>

    <string-array name="calc_dialog_errors">
        <item>Division by zero</item>
        <item>Out of bounds</item>
        <item>Result must be positive</item>
        <item>Result must be negative</item>
    </string-array>

    <!-- Firebase keys -->
    <string name="firebase_key_accounts">accounts</string>
    <string name="firebase_key_bills">bills</string>

    <!-- Preferences keys -->


    <string name="prefs_accounts_overview">Accounts Overview</string>
    <string name="prefs_latest_transactions">Latest Transactions</string>
    <string name="prefs_upcoming_bills">Upcoming Bills</string>
    <string name="prefs_high_spending">High Spending Alerts</string>
    <string name="prefs_expense_category">Expense By Category</string>
    <string name="prefs_income_expense">Invome Vs Expense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
